Added subscription to credential refreshes