@@ -6,11 +6,13 @@
 
     <groupId>com.ansill.tesla</groupId>
     <artifactId>tesla-api</artifactId>
-    <version>0.2.2</version>
+    <version>0.2.3</version>
+    <!-- mvn versions:set -DnewVersion=new_version -->
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.13</maven.compiler.source>
-        <maven.compiler.target>1.11</maven.compiler.target>
+        <maven.compiler.target>1.13</maven.compiler.target>
     </properties>
 
     <build>
@@ -25,6 +27,14 @@
                     <compilerArgs>
                         <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
